*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.6 ===
* Added CLAP plugin format headers version 1.1.4.

=== 1.0.5 ===
* Updated build scripts.

=== 1.0.2 ===
* Updated VST2 headers and definitions.
* Updated build scripts.

=== 1.0.1 ===
* Updated build scripts.

=== 1.0.0 ===
* Added support of building under LoongArch32 and LoongArch64 architectures.

=== 0.5.1 ===
* Updated build system.

=== 0.5.0 ===
* Initial version of 3rd party libraries
